be/src/runtime/mem-tracker.cc
@@ -216,6 +216,7 @@ shared_ptr<MemTracker> MemTracker::GetQueryMemTracker(
 }
 
 MemTracker::~MemTracker() {
+  DCHECK_EQ(consumption_->current_value(), 0) << label_ << "\n" << GetStackTrace();
   lock_guard<mutex> l(static_mem_trackers_lock_);
   if (auto_unregister_) UnregisterFromParent();
   // Erase the weak ptr reference from the map.
